[package]
name = "multithreaded-image-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
regex = "1.10.2"
scraper = "0.17.1"
serde = { version = "1.0.189", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
url = "2.4.1"
